Tentando ajustar a lista e formatando data

--- a/front/src/app/component/footer/footer.component.css
+++ b/front/src/app/component/footer/footer.component.css
@@ -1,6 +1,6 @@
 .footer {
     height: 5%;
-    position: fixed;
+    /*position: fixed;*/
     bottom: 0;
     font-size: 1rem;
     justify-content: center;
