--- a/front/src/app/components/read-all/read-all.component.css
+++ b/front/src/app/components/read-all/read-all.component.css
@@ -2,6 +2,18 @@
     width: 85%;
     margin: auto;
 }
+
+.badge {
+    margin-top: 1.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+ 
+.badge button {
+    margin: auto;
+    width: 100%;
+}
  
 /*Conteúdo*/
 .content {
@@ -14,7 +26,7 @@
 }
  
 mat-card {
-    margin-top: 0.8rem;
+    margin-top: 0.5rem;
     padding: 0.2rem;
 }
  
