--- a/front/src/app/components/read-all/read-all.component.html
+++ b/front/src/app/components/read-all/read-all.component.html
@@ -1,4 +1,9 @@
 <div class="container">
+    <div class="badge">
+        <button mat-stroked-button color="primary"
+            matBadge="{{closed}}">Number of Student
+        </button>    
+    </div>
     <button class="novo-todo mat-elevation-z8"
       mat-stroked-button color="primary">Read All
     </button>
