implementando create Student

--- a/front/src/app/component/footer/footer.component.css
+++ b/front/src/app/component/footer/footer.component.css
@@ -1,8 +1,13 @@
 .footer {
     height: 5%;
+    margin-top: 1rem;
     /*position: fixed;*/
     bottom: 0;
     font-size: 1rem;
     justify-content: center;
     bottom: 0;
+}
+
+p {
+    margin-top: auto;
 }
