--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-header></app-header>
-<app-read-all></app-read-all>
+<router-outlet></router-outlet>
+<!--app-read-all></app-read-all-->
 <app-footer></app-footer>
