--- a/front/src/app/components/create/create.component.html
+++ b/front/src/app/components/create/create.component.html
@@ -7,6 +7,7 @@
             <mat-label>Nome</mat-label>
             <input [(ngModel)]="student.firstName" name="student.firstName" matInput>
         </mat-form-field>
+
         <mat-form-field class="form" appearance="fill">
             <mat-label>Medium name</mat-label>
             <input [(ngModel)]="student.mediumName" name="student.mediumName" matInput>
@@ -49,7 +50,7 @@
       </div>
       <div class="buttons">
         <!--botões: -->
-        <button mat-stroked-button color="primary">Salvar</button>
-        <button mat-stroked-button color="warn">Cancelar</button>
+        <button (click)="create()" mat-stroked-button color="primary">Salvar</button>
+        <button (click)="voltar()" mat-stroked-button color="warn">Cancelar</button>
       </div>
 </form>
