--- a/front/src/app/components/create/create.component.html
+++ b/front/src/app/components/create/create.component.html
@@ -1,6 +1,6 @@
 <form>
     <h1>Novo Aluno</h1>
-    <!--https://material.angular.io/components/datepicker/examples-->
+    <!--https://material.angular.io/components/datepicker/examples>
       <mat-form-field class="data-finalizar" appearance="fill">
         <mat-label>Nascimento</mat-label>
         <input [(ngModel)]="student.birthDate" name="student.birthDate" 
@@ -8,12 +8,31 @@
         <mat-datepicker-toggle matSuffix [for]="dp3"></mat-datepicker-toggle>
         <mat-datepicker #dp3 disabled="false"></mat-datepicker>
       </mat-form-field>
+
       <mat-form-field class="data-finalizar" appearance="fill">
         <mat-label>Data de inicio</mat-label>
         <input [(ngModel)]="student.startDate" name="student.startDate" 
             matInput [matDatepicker]="dp3" disabled>
         <mat-datepicker-toggle matSuffix [for]="dp3"></mat-datepicker-toggle>
         <mat-datepicker #dp3 disabled="false"></mat-datepicker>
+      </mat-form-field-->
+
+      <mat-form-field color="accent" appearance="fill">
+        <mat-label>Nascimento</mat-label>
+        <input [(ngModel)] = "student.birthDate" name = "student.birthDate" 
+            matInput [matDatepicker]="picker1">
+        <mat-hint>MM/DD/YYYY</mat-hint>
+        <mat-datepicker-toggle matIconSuffix [for]="picker1"></mat-datepicker-toggle>
+        <mat-datepicker #picker1></mat-datepicker>
+      </mat-form-field>
+      
+      <mat-form-field color="accent" appearance="fill">
+        <mat-label>Data de inicio</mat-label>
+        <input [(ngModel)] = "student.startDate" name = "student.startDate"
+            matInput [matDatepicker]="picker2">
+        <mat-hint>MM/DD/YYYY</mat-hint>
+        <mat-datepicker-toggle matIconSuffix [for]="picker2"></mat-datepicker-toggle>
+        <mat-datepicker #picker2 color="primary"></mat-datepicker>
       </mat-form-field>
       
       <div class="forms">
@@ -37,12 +56,6 @@
         </mat-form-field>
 
         <mat-form-field class="form" appearance="fill">
-            <mat-label>Matricula</mat-label>
-            <input [(ngModel)] = "student.enrollNumber" name="student.enrollNumber" 
-                matInput placeholder="Ex. 011999111">
-        </mat-form-field>
-
-        <mat-form-field class="form" appearance="fill">
             <mat-label>Codigo do curso</mat-label>
             <input [(ngModel)]="student.courseId" name="student.courseId"
                 matInput placeholder="Ex. 01"/>
@@ -51,12 +64,6 @@
         <mat-form-field class="form" appearance="fill">
             <mat-label>Posição</mat-label>
             <input [(ngModel)]="student.position" name="student.position"
-                matInput placeholder="Ex. 1"/>
-        </mat-form-field>
-
-        <mat-form-field class="form" appearance="fill">
-            <mat-label>email</mat-label>
-            <input [(ngModel)]="student.email" name="student.email"
                 matInput placeholder="Ex. 1"/>
         </mat-form-field>
       </div>
